test/instance-checks-4.err.expect
test/instance-checks-4.ktn:1:1: error: cannot solve scalar type constraint t1 = int
test/instance-checks-4.ktn:1:1: note: t1 is from here
test/instance-checks-4.ktn:1:13: note: int is from here
